plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework:spring-context:6.2.7'
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'org.yaml:snakeyaml:2.2'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    implementation "jakarta.persistence:jakarta.persistence-api:3.1.0"
    implementation "org.hibernate.orm:hibernate-core:6.4.4.Final"
    implementation "org.springframework:spring-orm:6.1.6"
    implementation "org.springframework:spring-jdbc:6.1.6"
    implementation "org.postgresql:postgresql:42.7.7"
    implementation 'org.flywaydb:flyway-core:11.9.0'
    implementation 'org.flywaydb:flyway-database-postgresql:11.9.0'
    implementation 'org.springframework:spring-aop:6.2.7'
    implementation 'org.aspectj:aspectjweaver:1.9.24'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

test {
    useJUnitPlatform()
}



